Improving swagger doc
