# swagger.yaml
@@ -37,12 +37,12 @@ paths:
         - Authorization:
             - global
       deprecated: false
-  /forgotpasswords/loginbyemailandanswers:
+  /forgotpasswords/loginbyusernameandanswers:
     post:
       tags:
         - forgotpasswords
-      summary: ${ForgotPasswordsController.loginbyemailandanswers}
-      operationId: loginbyemailandanswersUsingPOST
+      summary: ${ForgotPasswordsController.loginbyusernameandanswers}
+      operationId: loginbyusernameandanswersUsingPOST
       consumes:
         - application/json
       produces:
@@ -56,9 +56,9 @@ paths:
             type: array
             items:
               $ref: '#/definitions/ForgotPasswordsQuestionsUsersAnswersRequestDTO'
-        - name: email
+        - name: username
           in: query
-          description: Email
+          description: Username
           required: false
           type: string
           allowEmptyValue: false
@@ -77,26 +77,26 @@ paths:
         - Authorization:
             - global
       deprecated: false
-  /forgotpasswords/loginbyemailandkey:
+  /forgotpasswords/loginbyusernameandkey:
     post:
       tags:
         - forgotpasswords
-      summary: ${ForgotPasswordsController.loginbyemailandkey}
-      operationId: loginbyemailandkeyUsingPOST
+      summary: ${ForgotPasswordsController.loginbyusernameandkey}
+      operationId: loginbyusernameandkeyUsingPOST
       consumes:
         - application/json
       produces:
         - '*/*'
       parameters:
-        - name: email
-          in: query
-          description: Email
-          required: false
-          type: string
-          allowEmptyValue: false
         - name: key
           in: query
           description: Key
+          required: false
+          type: string
+          allowEmptyValue: false
+        - name: username
+          in: query
+          description: Username
           required: false
           type: string
           allowEmptyValue: false
@@ -113,26 +113,26 @@ paths:
         - Authorization:
             - global
       deprecated: false
-  /forgotpasswords/passwordupdatebyemail:
+  /forgotpasswords/passwordupdatebyusername:
     post:
       tags:
         - forgotpasswords
-      summary: ${ForgotPasswordsController.passwordupdatebyemail}
-      operationId: passwordupdatebyemailUsingPOST
+      summary: ${ForgotPasswordsController.passwordupdatebyusername}
+      operationId: passwordupdatebyusernameUsingPOST
       consumes:
         - application/json
       produces:
         - '*/*'
       parameters:
-        - name: email
-          in: query
-          description: Email
-          required: false
-          type: string
-          allowEmptyValue: false
         - name: newPassword
           in: query
           description: NewPassword
+          required: false
+          type: string
+          allowEmptyValue: false
+        - name: username
+          in: query
+          description: Username
           required: false
           type: string
           allowEmptyValue: false
@@ -202,6 +202,12 @@ paths:
           required: false
           type: string
           allowEmptyValue: false
+        - name: username
+          in: query
+          description: Username
+          required: false
+          type: string
+          allowEmptyValue: false
       responses:
         '200':
           description: OK
@@ -218,6 +224,7 @@ paths:
       tags:
         - users
       summary: ${UserController.activate}
+      description: This is the user activation method.
       operationId: activateUsingPOST
       consumes:
         - application/json
@@ -225,15 +232,19 @@ paths:
         - '*/*'
       parameters:
         - name: activationkey
-          in: path
-          description: ActivationKey
-          required: false
+          in: query
+          description: Activation Key to activate the user
+          required: true
           type: string
+          allowEmptyValue: false
+          x-example: If user belongs to 'ROLE_INSTITUTION' the key should be collected from the emailcemaden, previously sent by ${UserController.sendadminkeybyemailcemaden}. If the user belongs to 'ROLE_CLIENT' the key should be provided by a 'ROLE_INSTITUTION' valid user.
         - name: username
-          in: path
-          description: Username
-          required: false
+          in: query
+          description: username of the user
+          required: true
           type: string
+          allowEmptyValue: false
+          x-example: This is an unique field, and consumers should be aware of it. By convention, WP6 should send the user phone number (i.e. (99)99999-9999).
       responses:
         '200':
           description: OK
@@ -243,8 +254,8 @@ paths:
           description: Something went wrong
         '403':
           description: Access denied
-        '404':
-          description: The user doesn't exist
+        '422':
+          description: User or ActivationKey registration issues
         '500':
           description: Expired or invalid JWT token
       security:
@@ -257,6 +268,7 @@ paths:
       tags:
         - users
       summary: ${UserController.login}
+      description: From a valid username and password, this method returns the JWT Token to be used in secure methods.
       operationId: loginUsingPOST
       consumes:
         - application/json
@@ -265,16 +277,18 @@ paths:
       parameters:
         - name: password
           in: query
-          description: Password
-          required: false
+          description: password of the user
+          required: true
           type: string
           allowEmptyValue: false
+          x-example: i.e. P@s5w0rD
         - name: username
           in: query
-          description: Username
-          required: false
+          description: username of the user
+          required: true
           type: string
           allowEmptyValue: false
+          x-example: This is an unique field, and consumers should be aware of it. By convention, WP6 should send the user phone number (i.e. (99)99999-9999).
       responses:
         '200':
           description: OK
@@ -282,7 +296,7 @@ paths:
             type: string
         '400':
           description: Something went wrong
-        '422':
+        '404':
           description: Invalid username/password supplied
       security:
         - Authorization:
@@ -293,6 +307,7 @@ paths:
       tags:
         - users
       summary: ${UserController.me}
+      description: This is the user search method by token.
       operationId: whoamiUsingGET
       produces:
         - '*/*'
@@ -329,11 +344,54 @@ paths:
         - Authorization:
             - global
       deprecated: false
+  /users/sendadminkeybyemailcemaden:
+    post:
+      tags:
+        - users
+      summary: ${UserController.sendadminkeybyemailcemaden}
+      description: This method is used for role 'ROLE_INSTITUTION'. To activate these users, a key is sent to the EduCemandenOrg e-mail and the user should inform this key to proceed.
+      operationId: sendadminkeybyemailcemadenUsingPOST
+      consumes:
+        - application/json
+      produces:
+        - '*/*'
+      parameters:
+        - name: emailcemaden
+          in: query
+          description: Emailcemaden associated to the user
+          required: true
+          type: string
+          allowEmptyValue: false
+          x-example: The Cemaden e-mail registred in the database. The key will be sent to this e-mail, and the user should be inform this key to proceed.
+        - name: username
+          in: query
+          description: username of the user
+          required: true
+          type: string
+          allowEmptyValue: false
+          x-example: This is an unique field, and consumers should be aware of it. By convention, WP6 should send the user phone number (i.e. (99)99999-9999).
+      responses:
+        '200':
+          description: OK
+        '400':
+          description: Something went wrong
+        '403':
+          description: Access denied
+        '404':
+          description: User or Email Cemaden not found
+        '500':
+          description: Expired or invalid JWT token
+      security:
+        - Authorization:
+            - global
+        - apiKey: []
+      deprecated: false
   /users/signup:
     post:
       tags:
         - users
       summary: ${UserController.signup}
+      description: This the signup method to create new users. By defaul all users are created as inactive. To activate, the method ${UserController.activate} should be invoked.
       operationId: signupUsingPOST
       consumes:
         - application/json
@@ -343,7 +401,7 @@ paths:
         - in: body
           name: user
           description: Signup User
-          required: false
+          required: true
           schema:
             $ref: '#/definitions/UsersRequestDTO'
       responses:
@@ -353,10 +411,8 @@ paths:
             type: string
         '400':
           description: Something went wrong
-        '403':
-          description: Access denied
         '422':
-          description: Username is already in use
+          description: Required parameters should be provided
       security:
         - Authorization:
             - global
@@ -366,22 +422,23 @@ paths:
       tags:
         - users
       summary: ${UserController.search}
+      description: This is the user search method by username.
       operationId: searchUsingGET
       produces:
         - '*/*'
       parameters:
         - name: username
-          in: path
-          description: Username
-          required: false
+          in: query
+          description: username of the user
+          required: true
           type: string
+          allowEmptyValue: false
+          x-example: This is an unique field, and consumers should be aware of it. By convention, WP6 should send the user phone number (i.e. (99)99999-9999).
       responses:
         '200':
           description: OK
           schema:
             $ref: '#/definitions/UsersResponseDTO'
-        '400':
-          description: Something went wrong
         '403':
           description: Access denied
         '404':
@@ -402,13 +459,13 @@ definitions:
   EduCemadenOrganizations:
     type: object
     properties:
-      activationkey:
-        type: string
       active:
         type: string
       address:
         type: string
       creation_date:
+        type: string
+      email:
         type: string
       id:
         type: integer
@@ -455,38 +512,7 @@ definitions:
       answer:
         type: string
     title: ForgotPasswordsQuestionsUsersAnswersRequestDTO
-  UsersRequestDTO:
-    type: object
-    properties:
-      username:
-        type: string
-      password:
-        type: string
-    title: UsersRequestDTO
-  UsersResponseDTO:
-    type: object
-    properties:
-      id:
-        type: integer
-        format: int32
-      username:
-        type: string
-      roles:
-        type: array
-        items:
-          type: string
-          enum:
-            - ROLE_ADMIN
-            - ROLE_INSTITUTION
-            - ROLE_CLIENT
-      eduCemadenOrganization:
-        $ref: '#/definitions/EduCemadenOrganizations'
-      rolesProviderActivationKeys:
-        type: array
-        items:
-          $ref: '#/definitions/UsersRolesproviderActivationKey'
-    title: UsersResponseDTO
-  UsersRolesproviderActivationKey:
+  UsersProviderActivationKey:
     type: object
     properties:
       activationkey:
@@ -494,10 +520,177 @@ definitions:
       id:
         type: integer
         format: int32
-      rolesid:
-        type: integer
-        format: int32
       usersid:
         type: integer
         format: int32
-    title: UsersRolesproviderActivationKey
+    title: UsersProviderActivationKey
+  UsersRequestDTO:
+    type: object
+    required:
+      - city
+      - nickname
+      - password
+      - roles
+      - state
+      - termsofusage
+      - username
+    properties:
+      username:
+        type: string
+        example: This is an unique field, and consumers should be aware of it. By convention, WP6 should send the user phone number (i.e. (99)99999-9999).
+        description: username of the user.
+      nickname:
+        type: string
+        example: i.e. beth2021. This is an unique field, and consumers should be aware of it.
+        description: nickname of the user.
+      password:
+        type: string
+        example: i.e. P@s5w0rD.
+        description: password of the user.
+      dateofborn:
+        type: string
+        format: date
+        example: i.e. 01/12/1978. Format should be dd/MM/yyyy.
+        description: Date of Born of the user.
+      gender:
+        type: string
+        example: i.e. M. 'M' stands for Male, 'F' Female, 'N' Not Informed
+        description: Gender of the user.
+        enum:
+          - '{@code M'
+          - F
+          - N}
+      state:
+        type: string
+        example: i.e. SP. State should be 2 characteres (UF)
+        description: state of the user.
+      city:
+        type: string
+        example: i.e. 'Governador Valadares'.
+        description: city of the user.
+      institutiontype:
+        type: string
+        example: i.e. 'E'. E stands for 'School', D 'Civil Defense', N 'No governamental', O 'others'
+        description: institution type of the user.
+        enum:
+          - '{@code E'
+          - D
+          - 'N'
+          - O}
+      institution:
+        type: string
+        example: i.e. 'Colegio Imaginario'.
+        description: institution of the user.
+      securityquestion:
+        type: string
+        example: i.e. 'What is my favorite color?'.
+        description: security question of the user.
+      securityanswer:
+        type: string
+        example: i.e. 'Blue'.
+        description: security answer of the user.
+      termsofusage:
+        type: boolean
+        example: false
+        description: terms of usage of the user.
+      roles:
+        type: array
+        example: i.e. ROLE_CLIENT.
+        description: roles of the user.
+        items:
+          type: string
+          enum:
+            - ROLE_ADMIN
+            - ROLE_INSTITUTION
+            - ROLE_CLIENT
+    title: UsersRequestDTO
+  UsersResponseDTO:
+    type: object
+    required:
+      - active
+      - city
+      - id
+      - nickname
+      - state
+      - termsofusage
+      - username
+    properties:
+      id:
+        type: integer
+        format: int32
+        example: This is a SERIAL and Primary Key field.
+        description: id of the user.
+      username:
+        type: string
+        example: This is an unique field, and consumers should be aware of it. By convention, WP6 should send the user phone number (i.e. (99)99999-9999).
+        description: username of the user.
+      nickname:
+        type: string
+        example: i.e. beth2021. This is an unique field, and consumers should be aware of it.
+        description: nickname of the user.
+      dateofborn:
+        type: string
+        format: date
+        example: i.e. 01/12/1978. Format should be dd/MM/yyyy.
+        description: Date of Born of the user.
+      gender:
+        type: string
+        example: i.e. M. 'M' stands for Male, 'F' Female, 'N' Not Informed
+        description: Gender of the user.
+        enum:
+          - '{@code M'
+          - F
+          - N}
+      state:
+        type: string
+        example: i.e. SP. State should be 2 characteres (UF)
+        description: state of the user.
+      city:
+        type: string
+        example: i.e. 'Governador Valadares'.
+        description: city of the user.
+      institutiontype:
+        type: string
+        example: i.e. 'E'. E stands for 'School', D 'Civil Defense', N 'No governamental', O 'others'
+        description: institution type of the user.
+        enum:
+          - '{@code E'
+          - D
+          - 'N'
+          - O}
+      institution:
+        type: string
+        example: i.e. 'Colegio Imaginario'.
+        description: institution of the user.
+      securityquestion:
+        type: string
+        example: i.e. 'What is my favorite color?'.
+        description: security question of the user.
+      securityanswer:
+        type: string
+        example: i.e. 'Blue'.
+        description: security answer of the user.
+      termsofusage:
+        type: boolean
+        example: false
+        description: terms of usage of the user.
+      active:
+        type: integer
+        format: int32
+        example: i.e. true.
+        description: whether user is active or not.
+      role:
+        type: string
+        example: i.e. 'ROLE_ADMIN' means system administrator, 'ROLE_INSTITUTION' means institution administrator, 'ROLE_CLIENT' means regular users
+        description: institution type of the user.
+        enum:
+          - '{@code ROLE_ADMIN'
+          - ROLE_INSTITUTION
+          - ROLE_CLIENT}
+      eduCemadenOrganization:
+        description: which Educational Cemaden Organization the user belongs.
+        $ref: '#/definitions/EduCemadenOrganizations'
+      providerActivationKey:
+        description: If this user can provide an activation key for other users ('ROLE_INSTITUTION'), this field will store the values.
+        $ref: '#/definitions/UsersProviderActivationKey'
+    title: UsersResponseDTO
